順弁 靜態頁面

--- a/project/src/component/Sunsua/css/sunsua.css
+++ b/project/src/component/Sunsua/css/sunsua.css
@@ -9,6 +9,7 @@
     background-color: rgba(259, 211, 103, 0.2);
     text-align: center;
 }
+
 #sunsua li {
     color: red;
     text-decoration: none;
@@ -16,6 +17,27 @@
 
 .footer {
     text-align: center;
+}
+
+.sunsuaBtn {
+    width: 150px;
+    height: 150px;
+    margin: 10px 0px;
+    background-color: rgba(247, 103, 249, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+@media (max-width: 990px) {
+    .sunsuaBtn {
+        width: 80px;
+        height: 80px;
+        margin: 5px 0px;
+        font-size: 20px;
+    }
 }
 
 /* 測試用 */
