--- a/project/src/component/Sunsua/css/sunsuaProposalInfo.css
+++ b/project/src/component/Sunsua/css/sunsuaProposalInfo.css
@@ -1,4 +1,3 @@
-
 #proposalInfo {
     display: flex;
     align-items: center;
@@ -8,13 +7,22 @@
     display: flex;
     align-items: center;
 }
-#proposalBtn{
+
+#proposalBtn {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     /* justify-content:flex-end; */
 }
+
+@media (max-width: 1200px) {
+    #proposalPic>img {
+        width: 150px;
+        height: 150px;
+    }
+}
+
 @media (max-width: 990px) {
     #proposalPic {
         display: none;
