--- a/project/src/component/Sunsua/css/sunsua.css
+++ b/project/src/component/Sunsua/css/sunsua.css
@@ -3,7 +3,7 @@
 }
 
 .header {
-    /* background-color: #f9d367; */
+    /* #f9d367; */
     /* #f767f9 */
     /* #676bf9 */
     background-color: rgba(259, 211, 103, 0.2);
