fpage畫面小更新

--- a/project/src/css/foodpandapage.css
+++ b/project/src/css/foodpandapage.css
@@ -5,3 +5,15 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 /* // Import Font awesome */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
+
+
+
+.section1_searchsection{
+    height:40vh;
+    width:80%;
+    margin-left: 10%;
+    background-color: aquamarine;
+}
+.section1_searchbar{
+    padding-top: 50px;
+}
