--- a/project/src/css/DashboardProduct.css
+++ b/project/src/css/DashboardProduct.css
@@ -9,3 +9,9 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.addproduct{
+    position: fixed;
+    right:0;
+    top:15%;
+    box-shadow: 5px 5px 3px grey;
+}
