--- a/project/src/component/Sunsua/css/sunsua.css
+++ b/project/src/component/Sunsua/css/sunsua.css
@@ -14,9 +14,22 @@
     text-align: center;
 }
 
+/* v2 上下版本 */
+#sunsuaBtnBox {
+    width: 80%;
+    margin: 0 auto;
+}
+.sunsuaBtn {
+    margin: 10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+
+
 /* 測試用 */
-
-
 .olRed {
     outline: 1px solid red;
 }
