--- a/finalProject/project/src/repeatability/latestnews.css
+++ b/finalProject/project/src/repeatability/latestnews.css
@@ -1,7 +1,2 @@
-.card-body {
-  border: 1px solid black;
-}
-
-.card-header {
-  border: 1px solid rgb(0, 0, 0);
-}
+/* 引入自型 */
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans); */
