--- a/finalProject/project/src/partpage/orderdetails.css
+++ b/finalProject/project/src/partpage/orderdetails.css
@@ -1,28 +1,53 @@
-.progress-6 {
-  width: 50px;
+/* .progress-1,
+.progress-2,
+.progress-3,
+.progress-4 {
   height: 15px;
   border-radius: 20px;
   color: #514b82;
   border: 1px solid;
   position: relative;
+  margin: 2px;
+  justify-content: center;
 }
 
-.progress-6::before {
+.progress-1 {
+  width: 60px;
+
+}
+
+.progress-2 {
+  width: 80px;
+}
+
+.progress-3 {
+  width: 80px;
+}
+
+.progress-4 {
+  width: 60px;
+}
+
+.progress-1::before {
   content: "";
   position: absolute;
   margin: 2px;
   inset: 0 100% 0 0;
   border-radius: inherit;
-  background: currentColor;
-  animation: p6 2s infinite;
+  background: palevioletred;
+  animation: p6 5s infinite;
 }
 
 @keyframes p6 {
   100% {
     inset: 0
   }
-}
+} */
 
 img {
-  width: 100px;
+  width: 250px;
+}
+
+.cardshadow {
+  box-shadow: 2px 2px rgb(232, 171, 196);
 }
