--- a/finalProject/project/src/repeatability/Taiwan.css
+++ b/finalProject/project/src/repeatability/Taiwan.css
@@ -1,26 +1,25 @@
 .twSvg {
   fill: none;
-  stroke: #5F9EA0;
+  stroke: #1d995b;
   stroke-width: 3;
   stroke-linecap: round;
   stroke-linejoin: round;
-  height: 800px;
+  height: 620px;
   width: 100%;
+  cursor: pointer;
 }
 
 @media(max-width:600px) {
   .twSvg {
-    height: 400px;
     width: 100%;
+    margin: 0 auto;
   }
 
 }
 
-.st1 {
-  fill: #6DD0A6;
-  fill: #fff;
-  stroke: #5F9EA0;
+path:hover {
+  fill: #1d5254;
+  stroke: none;
   stroke-width: 3;
-  stroke-linecap: round;
-  stroke-linejoin: round;
+
 }
