--- a/finalProject/project/src/repeatability/card.css
+++ b/finalProject/project/src/repeatability/card.css
@@ -1,6 +1,6 @@
 .setHeight {
   width: 100%;
-  height: 200px;
+  max-height: 200px;
 }
 
 @media(max-height:600px) {
@@ -8,4 +8,14 @@
     width: 100%;
     height: 200px;
   }
+}
+
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {
+  opacity: 0.7;
 }
