--- a/finalProject/project/src/repeatability/footer.css
+++ b/finalProject/project/src/repeatability/footer.css
@@ -48,7 +48,7 @@ footer {
 .footer-list-header {
   padding: 10px 0 5px 0;
   color: #fff;
-  font: 2.3vw "Oswald", sans-serif
+  font: 2.3em "Oswald", sans-serif
 }
 
 .footer-list-anchor {
@@ -153,7 +153,7 @@ footer {
   }
 
   .footer-list-header {
-    font-size: 3em;
+    font-size: 2.5em;
   }
 
   .footer-list-anchor {
