--- a/project/src/css/DashboardProduct.css
+++ b/project/src/css/DashboardProduct.css
@@ -2,16 +2,10 @@
     display: -webkit-box;
     -Webkit-box-orient: vertical;
     overflow: hidden;
-    text-overflow: ellipsis;
+    /* text-overflow: ellipsis; */
     -webkit-line-clamp: 2;
     font-size: 15px;
     line-height: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-}
-.addproduct{
-    position: fixed;
-    right:0;
-    top:15%;
-    box-shadow: 5px 5px 3px grey;
 }
