--- a/project/src/css/foodpandapage.css
+++ b/project/src/css/foodpandapage.css
@@ -7,6 +7,192 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 
 
+body{
+    background-image: url(../img/6.jpg);
+    background-position:left top;
+}
+.first-section{
+    padding-top: 70px;
+    width: 100%;
+    height: 60vh;
+    position: relative;
+}
+.first-section .section-left {
+    margin-left: 30px;
+    margin-top: 30px;
+    position: relative;
+}
+.first-section .section-left .special-text{
+    background-image: url(../img/順便特殊字體.png);
+    background-position: center center;
+    background-size: 350px 350px;
+    display: inline-block;
+    width: 150px;
+
+}
+.first-section .section-left h2{
+    font-size: 50px;
+    font-weight: 200;
+}
+.first-section .section-left h4{
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 15px;
+}
+.first-section .section-left .first-try{
+    width: 250px;
+    height: 70px;
+    background-color: #0093E9;
+    background-image: linear-gradient(135deg, #0093E9 0%, #80D0C7 100%);
+    border-radius: 70px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    text-shadow: 1px 1px black;
+    margin-top: 30px;
+    display: inline-block;
+}
+
+/* 播放按鈕 */
+.first-section .section-left .play-btn{
+    width: 70px;
+  height: 70px;
+  background: radial-gradient( rgba(94, 199, 204, 0.8) 60%, rgba(255, 255, 255, 1) 62%);
+  border-radius: 50%;
+  position: relative;
+  display: block;
+  margin: 100px auto;
+  box-shadow: 0px 0px 25px 3px rgba(111, 200, 204,0.8);
+  position: absolute;
+  top:110px;
+  left:300px
+}
+.first-section .section-left .play-btn:after{
+    content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-40%) translateY(-50%);
+  transform: translateX(-40%) translateY(-50%);
+  transform-origin: center center;
+  width: 0;
+  height: 0;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-left: 25px solid #fff;
+  z-index: 100;
+  -webkit-transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);    
+}
+.first-section .section-left .play-btn:before{
+    content: "";
+    position: absolute;
+    width: 150%;
+    height: 150%;
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+    -webkit-animation: pulsate1 2s;
+    animation: pulsate1 2s;
+    -webkit-animation-direction: forwards;
+    animation-direction: forwards;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: steps;
+    animation-timing-function: steps;
+    opacity: 1;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, .75);
+    top: -30%;
+    left: -30%;
+    background: rgba(198, 16, 0, 0);
+}
+@-webkit-keyframes pulsate1 {
+    0% {
+      transform: scale(0.6);
+      opacity: 1;
+      box-shadow: inset 0px 0px 25px 3px rgba(255, 255, 255, 0.75), 0px 0px 25px 10px rgba(255, 255, 255, 0.75);
+    }
+    100% {
+      transform: scale(1);
+      opacity: 0;
+      box-shadow: none;
+  
+    }
+  }
+  
+  @keyframes pulsate1 {
+    0% {
+      transform: scale(0.6);
+      opacity: 1;
+      box-shadow: inset 0px 0px 25px 3px rgba(255, 255, 255, 0.75), 0px 0px 25px 10px rgba(255, 255, 255, 0.75);
+    }
+    100% {
+      transform: scale(1);
+      opacity: 0;
+      box-shadow: none;
+  
+    }
+  }
+/* 播放按鈕 */
+
+
+.first-section .section-right img{
+   width: 450px;
+   height: 450px;
+   border-radius: 50%;
+
+}
+.first-section .dot{
+    position: absolute;
+    padding: 8px;
+    border-radius: 50%;
+    /* animation-name: dotdot; */
+    /* opacity:0; */
+}
+.first-section .dot1{
+    background-color: red;
+    left: 300px;
+    top:70px;
+    animation: dot1 4s alternate infinite;
+}
+.first-section .dot2{
+    background-color: blue;
+    left: 600px;
+    top:250px;
+    animation: dot2 5s alternate infinite;
+
+}
+.first-section .dot3{
+    background-color: gold;
+    left: 290px;
+    top:380px;
+    animation: dot3 2.5s alternate infinite;
+
+}
+@keyframes dot1{
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
+}
+@keyframes dot2{
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
+}
+@keyframes dot3{
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
+}
 
 .section1_searchsection{
     height:40vh;
