--- a/project/src/kangComponent/assets/css/lib/menubar/sidebar.css
+++ b/project/src/kangComponent/assets/css/lib/menubar/sidebar.css
@@ -22,6 +22,7 @@
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
     transition: width 300ms ease-in-out;
+    box-shadow: 1px 2px 15px grey;
 }
 
 .sidebar.sidebar-static {
@@ -80,13 +81,14 @@
 .sidebar .nano-content > ul li > a {
     display: block;
     cursor: pointer;
-    color: #878787;
+    color: black;
     padding: 10px;
-    line-height: 20px;
-    border-bottom: none;
+    line-height: 35px;
+    border-bottom: 1px dotted rgba(130, 180, 238, 0.541);
     background: none;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
+    font-size: 18px;
 }
 
 .sidebar .nano-content > ul li > a > .sidebar-collapse-icon {
