--- a/project/src/components/component/css/card.css
+++ b/project/src/components/component/css/card.css
@@ -1,12 +1,15 @@
 .setHeight {
-  width: 100%;
-  max-height: 200px;
+  max-width: 200px;
+  max-height: 300px;
+
+  margin-bottom: 5px;
+
+  border:1px solid red;
 }
 
-@media(max-height:600px) {
+@media(max-width:1200px) {
   .setHeight {
-    width: 100%;
-    height: 200px;
+    width: 200px;
   }
 }
 
@@ -14,8 +17,23 @@
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
+  max-width: 100%;
+  max-height: 150px;
 }
-
 #myImg:hover {
   opacity: 0.7;
+}
+.zImg{
+  padding: 2px;
+}
+.zText{
+background-color: wheat;
+padding: 1px;
+margin: 1px;   
+}
+.eva{
+  float: right;
+}
+.stylecards{
+  padding: 2px;
 }
