--- a/project/src/chattyComponents/css/cart.css
+++ b/project/src/chattyComponents/css/cart.css
@@ -6,10 +6,10 @@
     background-color: darkcyan;
 }
 .sp2 {
-    background-color: coral;
+    /* background-color: coral; */
 }
 .sp3 {
-    background-color: darkgray;
+    /* background-color: darkgray; */
 }
 .cart-food-sp {
     height: 80px;
@@ -19,10 +19,10 @@
 }
 
 .menutail {
-    background-color: darkorange;
+    /* background-color: darkorange; */
 }
 .menutailBar {
-    background-color:indianred;
+    /* background-color:indianred; */
     height: 30px;
     /* display: flex;
     justify-content: right; */
