--- a/project/src/css/foodpandapage.css
+++ b/project/src/css/foodpandapage.css
@@ -196,8 +196,8 @@
 }
 
 .section1_searchsection{
-    height:50vh;
-    width:80%;
+    height:60vh;
+    width:100%;
 }
 .section1_searchbar{
     padding-top: 50px;
@@ -229,4 +229,21 @@
     background-image: url('../img/7.png');
     background-position:  center center;
     background-size: auto;
+} */
+
+.searchbar-wrapper{
+    /* border:1px solid black; */
+    background: url(../img/hand.png);
+    background-position:  left bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* width: 80%; */
+    height: 300px;
+    position: relative;
+}
+/* .searchbar-wrapper img{
+    width: 700px;
+    height: 400px;
+    position: absolute;
+    bottom: -150px;
 } */
