--- a/project/src/components/css/firstpage.css
+++ b/project/src/components/css/firstpage.css
@@ -4,14 +4,12 @@
 }
 
 .firstpic {
-
-  height: 450px;
+  height: 600px;
 }
 
 @media(max-width:1200px) {
   .firstpic {
-
-    height: 430px;
+    height: 450px;
   }
 
   .textheader {
@@ -31,7 +29,7 @@
 @media(max-width:600px) {
   .firstpic {
 
-    height: 300px;
+    height: 250px;
   }
 
   .textheader {
@@ -64,4 +62,14 @@
 
 .btnon:hover {
   background-color: #f1f1f1;
+}
+
+.ImgZ {
+  font-weight: 1000;
+  height: 50px;
+  background-image: url("./文字背景.png");
+  background-size: 250px 40px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  text-shadow: 1px 1px rgba(255, 217, 0, 0.493);
 }
