--- a/project/src/components/repeatability/css/navbar.css
+++ b/project/src/components/repeatability/css/navbar.css
@@ -1,7 +1,10 @@
 .nav-bg {
-  background-color: #e3d6ce;
+  background-image: url('./hito.png');
+  background-repeat: no-repeat;
   padding: 33px;
   margin: 0 auto;
+  z-index: 99999999999999999999999;
+  
 }
 
 .logoImg {
@@ -14,5 +17,26 @@
 }
 
 .buttons {
-  text-align: right;
+  /* border: 1px solid black; */
+  font-size: 24px;
+  font-weight: bolder;
+  
+}
+/* .div button span{
+  font-size: 24px;
+  font-weight: bolder;
+} */
+.btnsm{
+  height: 70px;
+  width: 125px;
+  
+}
+.settext{
+  font-size: 24px;
+  font-weight: bolder;
+}
+
+.settext:hover,
+.settext:focus{
+
 }
