--- a/project/src/chattyComponents/css/navbar.css
+++ b/project/src/chattyComponents/css/navbar.css
@@ -1,3 +1,7 @@
 body {
-    background-image: url(../../img/6.jpg);
+    /* background-image: url(../imgs/foodsideup.jfif); */
+    /* background-position: center; 
+    background-repeat: no-repeat, repeat;
+    background-size: 100% 100%;
+    background-blend-mode:hard-light  */
 }
