--- a/project/src/chattyComponents/css/signin.css
+++ b/project/src/chattyComponents/css/signin.css
@@ -13,9 +13,11 @@
   }
 } */
 
-html,
+
 body {
-  height: 100%;
+  /* background-image: url('../../img/7.png');
+  z-index: 99;
+  height: 100%; */
   
 }
 
