--- a/project/src/chattyComponents/css/signin.css
+++ b/project/src/chattyComponents/css/signin.css
@@ -1,3 +1,10 @@
+.backimg {
+  background-image: url(../imgs/foodsideup.jfif);
+  background-position: center; 
+  background-repeat: no-repeat, repeat;
+  background-size: 100% 100%;
+  background-blend-mode:hard-light 
+}
 /* .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
@@ -14,12 +21,12 @@
 } */
 
 
-body {
+/* body { */
   /* background-image: url('../../img/7.png');
   z-index: 99;
   height: 100%; */
   
-}
+/* } */
 
 /* body { */
   /* display: -ms-flexbox; */
