--- a/project/src/components/component/css/taiwan.css
+++ b/project/src/components/component/css/taiwan.css
@@ -5,13 +5,10 @@
   height: 620px;
   width: 100%;
 }
-
-
-
 path:hover {
   fill: #1d5254;
   stroke: none;
   /* stroke-width: 3; */
   cursor: pointer;
-
+  background-clip: padding-box;
 }
