--- a/project/src/chattyComponents/css/cart.css
+++ b/project/src/chattyComponents/css/cart.css
@@ -1,6 +1,6 @@
-#footer {
+/* #footer {
     background-color:cornflowerblue;
-}
+} */
 .cart-food-sp {
     /* height: 80px; */
     min-height: 50px;
