--- a/project/src/chattyComponents/css/signin.css
+++ b/project/src/chattyComponents/css/signin.css
@@ -1,9 +1,16 @@
 .backimg {
+  /* width: 100%; */
+  height: 100vh;
   background-image: url(../imgs/foodsideup.jfif);
   background-position: center; 
   background-repeat: no-repeat, repeat;
   background-size: 100% 100%;
-  background-blend-mode:hard-light 
+  background-blend-mode:hard-light;
+  background-color: white;
+  /* opacity: 0.5; */
+  /* z-index: -1; */
+  /* position: relative; */
+  /* display: flex */
 }
 /* .bd-placeholder-img {
   font-size: 1.125rem;
