--- a/project/src/index.css
+++ b/project/src/index.css
@@ -1,4 +1,3 @@
-
 /* 右側卷軸改動(可更改) */
 
 /* 網頁捲軸【寬度】 */
@@ -14,10 +13,11 @@
 /* 網頁捲軸【把手】顏色 */
 ::-webkit-scrollbar-thumb {
   background: #ffe694;
-  border-radius:25px;
+  border-radius: 25px;
 }
 
 /* 網頁捲軸【滑過時】把手的顏色 */
 ::-webkit-scrollbar-thumb:hover {
-  background: #fff;
+  background: #f5d878;
+
 }
