--- a/project/src/components/component/css/taiwan.css
+++ b/project/src/components/component/css/taiwan.css
@@ -5,10 +5,9 @@
   height: 620px;
   width: 100%;
 }
-path:hover {
+/* path:hover {
   fill: #1d5254;
   stroke: none;
-  /* stroke-width: 3; */
   cursor: pointer;
-  background-clip: padding-box;
-}
+  transition-duration:1.5s;
+} */
