首頁程式不在做變動 部分樣式 在請峻軒看哪邊需要在更動畫面的樣式

--- a/project/src/components/css/firstpage.css
+++ b/project/src/components/css/firstpage.css
@@ -47,6 +47,46 @@
 
 }
 
+.btnmore {
+  margin: 0;
+  background: transparent;
+  padding: 0;
+  border: none;
+}
+
+.btnmore {
+  border-right: 6px;
+  --text-stroke-color: rgb(255, 202, 87);
+  --animation-color: #ff9900;
+  --fs-size: 2em;
+  letter-spacing: 3px;
+  text-decoration: none;
+  font-size: var(--fs-size);
+  font-family: "Arial";
+  position: relative;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px var(--text-stroke-color);
+}
+
+.hover-text {
+  position: absolute;
+  box-sizing: border-box;
+  content: attr(data-text);
+  color: var(--animation-color);
+  width: 0%;
+  inset: 0;
+  border-right: var(--border-right) solid var(--animation-color);
+  overflow: hidden;
+  transition: 1.5s;
+  -webkit-text-stroke: 1px var(--animation-color);
+}
+
+.btnmore:hover .hover-text {
+  width: 100%;
+  filter: drop-shadow(0 0 23px var(--animation-color))
+}
+
 .btnon {
   background-color: #ddd;
   border: none;
