--- a/project/src/chattyComponents/css/signin.css
+++ b/project/src/chattyComponents/css/signin.css
@@ -14,17 +14,23 @@
 }
 .backcimg {
   /* width: 100%; */
-  height: 100vh;
+  /* height: 100vh;
   background-image: url(../imgs/16.png);
   background-position: center; 
   background-repeat: no-repeat, repeat;
-  background-size: 50%;
+  background-size: 50%; */
   /* background-blend-mode:hard-light; */
   /* background-color: white; */
   /* opacity: 0.5; */
   /* z-index: -1; */
   /* position: relative; */
   /* display: flex */
+}
+
+.card3d:hover {
+  /* transform: translateZ(10px) rotateX(20deg) rotateY(20deg); */
+  opacity: 0.8;
+ transform: scale(1.10);
 }
 /* .bd-placeholder-img {
   font-size: 1.125rem;
@@ -62,6 +68,7 @@
 
 .form-top {
   /* padding-top: 8%; */
+  
   padding-bottom: 25px;
 }
 .form-bottom {
@@ -70,7 +77,7 @@
 .form-signin {
   /* background-color: cadetblue; */
   width: 100%;
-  max-width: 330px;
+  max-width: 430px;
   /* padding: 15px; */
   margin: auto;
   /* padding-top: 10%; */
