--- a/project/src/chattyComponents/css/register.css
+++ b/project/src/chattyComponents/css/register.css
@@ -1,6 +1,6 @@
-.registerformin {
-    padding: 45px;
-}
-#mesg{
+/* .registerformin { */
+    /* padding: 45px; */
+/* } */
+/* #mesg{
     color: gray;
-}
+} */
