--- a/project/src/component/Sunsua/css/sunsua.css
+++ b/project/src/component/Sunsua/css/sunsua.css
@@ -4,5 +4,9 @@
 
 #sunsuaheader {
     background-color: rgba(259, 211, 103, 0.2);
+    width: 90%;
+    margin: 0 auto;
+    border: 3px solid black;
+    border-radius: 50px;
     text-align: center;
 }
