--- a/project/src/component/Sunsua/css/sunsuaProposal.css
+++ b/project/src/component/Sunsua/css/sunsuaProposal.css
@@ -6,3 +6,21 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+
+#sunsuaProposal .sunsuaInput:focus {
+    outline: none;
+    border: rgb(46, 128, 176) 2px solid;
+    /* border-bottom: red 2px solid; */
+    /* transition: transform var(--timing) ease; */
+}
+
+#sunsuaProposal .container {
+    border: 3px solid rgb(49, 166, 150);
+    border-radius: 50px;
+}
+
+#sunsuaProposal .container::before {
+    border: 3px solid rgb(49, 166, 150);
+    border-radius: 50px;
+}
