--- a/project/src/component/Sunsua/css/sunsuaSearchProposal.css
+++ b/project/src/component/Sunsua/css/sunsuaSearchProposal.css
@@ -1,3 +1,9 @@
-#searchBox{
+#searchBox {
     width: 80%;
+}
+
+#sunsuaSearchProposal {
+    outline: none;
+    border: 3px solid rgb(46, 128, 176);
+    border-radius: 50px;
 }
