--- a/project/src/css/firebase.css
+++ b/project/src/css/firebase.css
@@ -32,10 +32,11 @@
     background-color: white;
 }
 .signout-wrapper .avatar{
-    background-image: url(../img/avatar.png);
+    background-image: url(../img/gmail_avatar.png);
     width:50px;
     background-size: cover;
     border-radius: 50%;
+    margin-right: 5px;
 }
 .signout-wrapper .name{
     margin: auto 0;
