--- a/project/src/components/repeatability/css/navbar.css
+++ b/project/src/components/repeatability/css/navbar.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../../../img/6.jpg');
+  /* background-image: url('../../../img/6.jpg'); */
 }
 .nav-bg {
   /* background-image: url('./hito.png'); */
