--- a/project/src/css/foodpandapage.css
+++ b/project/src/css/foodpandapage.css
@@ -7,11 +7,11 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 
 
-.body-wrapper{
+/* .body-wrapper{
     background-image: url(../img/6.jpg);
     background-position:left top;
     background-size: 100%;
-}
+} */
 .first-section{
     padding-top: 100px;
     width: 100%;
