--- a/project/src/components/repeatability/css/footer.css
+++ b/project/src/components/repeatability/css/footer.css
@@ -1,7 +1,8 @@
 .footerbackimg {
-  background-image: url("./footertry.jpg");
-  background-size: 100% 100%;
-  background-position: center;
+  height: 70vh;
+  background-image: url("./14.png");
+  background-size: 100%;
+  background-position: bottom;
   background-repeat: no-repeat;
   font-weight: 1000;
 }
