--- a/project/src/components/repeatability/css/footer.css
+++ b/project/src/components/repeatability/css/footer.css
@@ -1,7 +1,7 @@
 .footerbackimg {
-  height: 100vh;
+  height: 40vh;
   background-image: url("./14.png");
-  background-size: 100%;
+  background-size: 400px 400px;
   background-position: bottom;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
