--- a/project/src/components/component/css/taiwan.css
+++ b/project/src/components/component/css/taiwan.css
@@ -1,10 +1,11 @@
 .twSvg {
   fill: none;
-  stroke: #1d995b;
-
+  stroke: #69064d;
+  /* border-style: solid; */
   height: 620px;
   width: 100%;
 }
+
 /* path:hover {
   fill: #1d5254;
   stroke: none;
