--- a/project/src/component/Sunsua/css/sunsuaProposal.css
+++ b/project/src/component/Sunsua/css/sunsuaProposal.css
@@ -20,7 +20,7 @@
     border-radius: 50px;
 }
 
-#sunsuaProposal .container::before {
+/* #sunsuaProposal .container::before {
     border: 3px solid rgb(49, 166, 150);
     border-radius: 50px;
-}
+} */
