--- a/project/src/component/Sunsua/css/sunsuaSearchProposal.css
+++ b/project/src/component/Sunsua/css/sunsuaSearchProposal.css
@@ -4,7 +4,8 @@
 
 #sunsuaSearchProposal {
     outline: none;
-    border: 3px solid rgb(0, 40, 79);
+    /* border: 3px solid rgb(0, 40, 79); */
+    border: 3px solid rgb(46, 128, 176);
     border-radius: 50px;
     min-height: 455px;
 }
