--- a/project/src/chattyComponents/css/payment.css
+++ b/project/src/chattyComponents/css/payment.css
@@ -116,3 +116,13 @@ section {
     right: 0;
     width: 0;
    }
+
+   .itemback{
+    background-image: url(../../img/15.png);
+    background-size: 200px 85px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    margin:30PX 0;
+
+
+}
