修改 todoindex 樣式

--- a/project/src/css/DashboardProduct.css
+++ b/project/src/css/DashboardProduct.css
@@ -1,11 +1,13 @@
-.product_des{
-    display: -webkit-box;
-    -Webkit-box-orient: vertical;
-    overflow: hidden;
-    /* text-overflow: ellipsis; */
+.product_des {
+    width: 100%;
     -webkit-line-clamp: 2;
     font-size: 15px;
-    line-height: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+}
+
+.product_des p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
