--- a/project/src/components/css/firstpage.css
+++ b/project/src/components/css/firstpage.css
@@ -6,7 +6,7 @@
   /* overflow: hidden; */
   background-image: url('./13.png');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
   background-size: 100%
     /* background-position: center; */
 
