--- a/project/src/components/component/css/card.css
+++ b/project/src/components/component/css/card.css
@@ -36,3 +36,11 @@
 .stylecards {
   padding: 2px;
 }
+
+.restaurantNameText {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
